Bug 1677388: Pass a copy of our cached default DEVMODE into DeviceCapabilitiesW calls. r=jfkthame

This is to prevent threading issues that some drivers seem to have when they
access their own default DEVMODE internally.

Differential Revision: https://phabricator.services.mozilla.com/D97789