widget/windows/nsPrinterWin.cpp
@@ -36,7 +36,9 @@ already_AddRefed<nsPrinterWin> nsPrinterWin::Create(
 
 template <class T>
 static nsTArray<T> GetDeviceCapabilityArray(const LPWSTR aPrinterName,
-                                            WORD aCapabilityID, int& aCount) {
+                                            WORD aCapabilityID,
+                                            const DEVMODEW* aDevmodeW,
+                                            int& aCount) {
   MOZ_ASSERT(aCount >= 0, "Possibly passed aCount from previous error case.");
 
   nsTArray<T> caps;
@@ -58,7 +60,7 @@ static nsTArray<T> GetDeviceCapabilityArray(const LPWSTR aPrinterName,
     // printers with the same name. Note: this (and the call below) are blocking
     // calls, which could be slow.
     aCount = ::DeviceCapabilitiesW(aPrinterName, nullptr, aCapabilityID,
-                                   nullptr, nullptr);
+                                   nullptr, aDevmodeW);
     if (aCount <= 0) {
       return caps;
     }
@@ -67,9 +69,9 @@ static nsTArray<T> GetDeviceCapabilityArray(const LPWSTR aPrinterName,
   // As DeviceCapabilitiesW doesn't take a size, there is a greater risk of the
   // buffer being overflowed, so we over-allocate for safety.
   caps.SetLength(aCount * 2);
-  int count =
-      ::DeviceCapabilitiesW(aPrinterName, nullptr, aCapabilityID,
-                            reinterpret_cast<LPWSTR>(caps.Elements()), nullptr);
+  int count = ::DeviceCapabilitiesW(aPrinterName, nullptr, aCapabilityID,
+                                    reinterpret_cast<LPWSTR>(caps.Elements()),
+                                    aDevmodeW);
   if (count <= 0) {
     caps.Clear();
     return caps;
@@ -98,13 +100,29 @@ nsPrinterWin::GetSystemName(nsAString& aName) {
 }
 
 bool nsPrinterWin::SupportsDuplex() const {
+  // Some printer drivers have threading issues around using their default
+  // DEVMODE, so we use a copy of our cached one.
+  nsTArray<uint8_t> devmodeWStorage = CopyDefaultDevmodeW();
+  if (devmodeWStorage.IsEmpty()) {
+    return false;
+  }
+  auto* devmode = reinterpret_cast<DEVMODEW*>(devmodeWStorage.Elements());
+
   return ::DeviceCapabilitiesW(mName.get(), nullptr, DC_DUPLEX, nullptr,
-                               nullptr) == 1;
+                               devmode) == 1;
 }
 
 bool nsPrinterWin::SupportsColor() const {
+  // Some printer drivers have threading issues around using their default
+  // DEVMODE, so we use a copy of our cached one.
+  nsTArray<uint8_t> devmodeWStorage = CopyDefaultDevmodeW();
+  if (devmodeWStorage.IsEmpty()) {
+    return false;
+  }
+  auto* devmode = reinterpret_cast<DEVMODEW*>(devmodeWStorage.Elements());
+
   return ::DeviceCapabilitiesW(mName.get(), nullptr, DC_COLORDEVICE, nullptr,
-                               nullptr) == 1;
+                               devmode) == 1;
 }
 
 bool nsPrinterWin::SupportsMonochrome() const {
@@ -141,8 +159,16 @@ bool nsPrinterWin::SupportsMonochrome() const {
 }
 
 bool nsPrinterWin::SupportsCollation() const {
+  // Some printer drivers have threading issues around using their default
+  // DEVMODE, so we use a copy of our cached one.
+  nsTArray<uint8_t> devmodeWStorage = CopyDefaultDevmodeW();
+  if (devmodeWStorage.IsEmpty()) {
+    return false;
+  }
+  auto* devmode = reinterpret_cast<DEVMODEW*>(devmodeWStorage.Elements());
+
   return ::DeviceCapabilitiesW(mName.get(), nullptr, DC_COLLATE, nullptr,
-                               nullptr) == 1;
+                               devmode) == 1;
 }
 
 nsPrinterBase::PrinterInfo nsPrinterWin::CreatePrinterInfo() const {
@@ -218,17 +244,25 @@ nsTArray<uint8_t> nsPrinterWin::CopyDefaultDevmodeW() const {
 }
 
 nsTArray<mozilla::PaperInfo> nsPrinterWin::PaperList() const {
+  // Some printer drivers have threading issues around using their default
+  // DEVMODE, so we use a copy of our cached one.
+  nsTArray<uint8_t> devmodeWStorage = CopyDefaultDevmodeW();
+  if (devmodeWStorage.IsEmpty()) {
+    return {};
+  }
+  auto* devmode = reinterpret_cast<DEVMODEW*>(devmodeWStorage.Elements());
+
   // Paper IDs are returned as WORDs.
   int requiredArrayCount = 0;
   auto paperIds = GetDeviceCapabilityArray<WORD>(mName.get(), DC_PAPERS,
-                                                 requiredArrayCount);
+                                                 devmode, requiredArrayCount);
   if (!paperIds.Length()) {
     return {};
   }
 
   // Paper names are returned in 64 long character buffers.
   auto paperNames = GetDeviceCapabilityArray<Array<wchar_t, 64>>(
-      mName.get(), DC_PAPERNAMES, requiredArrayCount);
+      mName.get(), DC_PAPERNAMES, devmode, requiredArrayCount);
   // Check that we have the same number of names as IDs.
   if (paperNames.Length() != paperIds.Length()) {
     return {};
@@ -236,8 +270,8 @@ nsTArray<mozilla::PaperInfo> nsPrinterWin::PaperList() const {
 
   // Paper sizes are returned as POINT structs with a tenth of a millimeter as
   // the unit.
-  auto paperSizes = GetDeviceCapabilityArray<POINT>(mName.get(), DC_PAPERSIZE,
-                                                    requiredArrayCount);
+  auto paperSizes = GetDeviceCapabilityArray<POINT>(
+      mName.get(), DC_PAPERSIZE, devmode, requiredArrayCount);
   // Check that we have the same number of sizes as IDs.
   if (paperSizes.Length() != paperIds.Length()) {
     return {};
